# gim

./: LICENSE  README.md  pyproject.toml
src/gim/: __init__.py  explain.py
src/gim/context/: __init__.py  attention.py  gim.py  norm.py  softmax.py
tests/: __init__.py  conftest.py  test_components.py  test_explain.py  test_gim_context.py
tests/happy_paths/: test_happy_path_explain_hf.py  test_happy_path_explain_tlens.py  test_happy_path_hf.py  test_happy_path_tlens.py
tests/models/: __init__.py  tiny_lm.py
