[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gim-explain"
version = "0.1.2"
description = "Gradient-based Interpretability Method for transformer feature attribution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["interpretability", "transformers", "feature-attribution", "explainability", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
tlens = [
    "transformer-lens>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "transformer-lens>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/corticph/gim"
Documentation = "https://github.com/corticph/gim#readme"
Repository = "https://github.com/corticph/gim"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gim = ["py.typed"]
